fix(EM): route to fetch asyncAPI specs
